--- a/sales.html
+++ b/sales.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Sales</title>
   </head>
   <body>
+    <header>
+      <div>
+        <img src="img/salmon.png" alt="logo" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="/index.html">Index</a></li>
+          <li><a href="/sales.html">Sales</a></li>
+        </ul>
+      </nav>
+    </header>
     <div id="parent"></div>
     <script src="js/app.js"></script>
   </body>
