--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/index.html">Index</a></li>
-          <li><a href="/sales.html">Sales</a></li>
+          <li><a href="./index.html">Index</a></li>
+          <li><a href="./sales.html">Sales</a></li>
         </ul>
       </nav>
     </header>
