added contact info

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <title>Index</title>
   </head>
   <body>
@@ -25,6 +31,52 @@
         <div class="black-layer"></div>
         <img src="img/family.jpg" alt="family" />
         <h1>Salmon Cookies</h1>
+      </section>
+      <section class="info">
+        <div>
+          <h3>Locations with addresses</h3>
+          <ul>
+            <li>
+              Seattle:
+              <address>Street 1692 Elliot Avenue</address>
+            </li>
+            <li>
+              Tokyo:
+              <address>Street 1692 Elliot Avenue</address>
+            </li>
+            <li>
+              Dubai:
+              <address>Street 1692 Elliot Avenue</address>
+            </li>
+            <li>
+              Paris:
+              <address>Street 1692 Elliot Avenue</address>
+            </li>
+            <li>
+              Lima:
+              <address>Street 1692 Elliot Avenue</address>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>Open Hours</h3>
+          <p>From 6:00 AM to 8:00 PM for all locations</p>
+        </div>
+        <div>
+          <h3>Contact Information</h3>
+          <ul>
+            <li>Email: example@gmail.com</li>
+            <li>Phone Number: 888-888-888</li>
+            <ul>
+              <li>
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter-square"></i></a>
+              </li>
+            </ul>
+          </ul>
+        </div>
       </section>
       <section class="tools">
         <div class="header">
