--- a/sales.html
+++ b/sales.html
@@ -20,6 +20,40 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <form action="" id="new-place-form">
+        <fieldset>
+          <legend>New Place</legend>
+          <div>
+            <label for="name">Location Name</label>
+            <input type="text" id="name" name="name" />
+
+            <label for="min-customer">Min Customer/h</label>
+            <input
+              type="number"
+              id="min-customer"
+              name="minCustomer"
+              step="0.01"
+            />
+          </div>
+          <div>
+            <label for="max-customer">Max Customer/h</label>
+            <input
+              type="number"
+              id="max-customer"
+              name="maxCustomer"
+              step="0.01"
+            />
+
+            <label for="avg-cookie">Avg. Cookies</label>
+            <input type="number" id="avg-cookie" name="avgCookie" step="0.01" />
+          </div>
+          <div>
+            <input type="submit" id="submit" />
+          </div>
+        </fieldset>
+      </form>
+    </main>
     <div id="parent"></div>
     <script src="js/app.js"></script>
   </body>
