added fonts and more styling

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&family=Montserrat:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Index</title>
   </head>
   <body>
@@ -31,6 +35,7 @@
         <div class="black-layer"></div>
         <img src="img/family.jpg" alt="family" />
         <h1>Salmon Cookies</h1>
+        <p>The most delicious Cookies out there</p>
       </section>
       <section class="info">
         <div>
